tdf#114973 sw: IsSelOvr() should not leave the text

Jumping from body to header is certainly unexpected, call FindNextCnt()
which does additional checks to stay in the same text environment.

Change-Id: If54bff62cac420dc0990b6be070b81fa56365c50
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146256
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 5aeee226479427062ac885be407671981d6940ef)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146205
Reviewed-by: Caolán McNamara <caolanm@redhat.com>